# app-in-a-box

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  branding.json  docker-compose.yml  init-interactive.sh  init.sh  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: product-owner.md
.claude/hooks/: block-main-commits.sh  block-wallet-secrets.sh  check-onboard.sh  preflight-swap.sh
.claude/rules/: git-workflow.md  trading-bot-workflow.md  wallet-presentation.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  deploy-cloudrun.yaml
db/: init.sql
docs/: api-reference.md  architecture.md  bots-and-bytes-v5.pptx  configuration.md  contributing.md  facilitator-runbook.md  implementation-plan.md  specification.md  strategy-lifecycle.md  user-stories.md  verification-checklist.md  workshop-prereqs.md
docs/incidents/: 2026-04-24-eip7702-drain.md
docs/workshop/: prereqs.md  run-of-show.md  setup-guide.md
infra/terraform/: SETUP.md  backend-dev.hcl  backend-prod.hcl  environment-dev.tfvars  main.tf  (+1 more)
plugin/: .mcp.json  README.md
scripts/: confirm-backup.sh  init-master-key.sh  pay_easter_egg.py  reveal-secret.sh  run-bare.sh  setup-mcp.sh  setup.sh  stash-secret.sh  test_x402_mainnet.py  verify_quickstart.sh
server/: .env.example  pyproject.toml  requirements.txt
src/: app.py  config.py  health.py
tests/: conftest.py  test_auth.py  test_docs.py  test_easter_egg.py  test_echo.py  test_health.py  test_items.py  test_mcp.py  test_notes.py  test_x402.py
(+156 files in other folders)
