[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "x402-app-template"
version = "0.1.0"
description = "FastAPI + MCP service template for GCP Cloud Run"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "fast: Unit tests, no external deps (<0.1s)",
    "slow: DB or network ops (0.1-5s)",
    "integration: Full workflows requiring running services (>5s)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
